--- a/Example/Podfile
+++ b/Example/Podfile
@@ -27,3 +27,11 @@ target 'GamePluginIOS_Tests', :exclusive => true do
   pod 'FBSnapshotTestCase'
   pod 'Expecta+Snapshots'
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+    end
+  end
+end
