--- a/Example/Podfile
+++ b/Example/Podfile
@@ -22,10 +22,10 @@ end
 target 'GamePluginIOS_Tests', :exclusive => true do
   pod "GamePluginIOS", :path => "../"
 
-  pod 'Specta'
-  pod 'Expecta'
-  pod 'FBSnapshotTestCase'
-  pod 'Expecta+Snapshots'
+  #pod 'Specta'
+  #pod 'Expecta'
+  #pod 'FBSnapshotTestCase'
+  #pod 'Expecta+Snapshots'
 end
 
 post_install do |installer|
@@ -35,3 +35,4 @@ post_install do |installer|
     end
   end
 end
+
