--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,9 +6,9 @@ target 'GamePluginIOS_Example' do
   pod 'GamePluginIOS', :path => '../'
 
   # 统计
-  # pod 'AnalyticTD'
-  # pod 'AnalyticUM'
-  # pod 'AnalyticFL'
+  pod 'AnalyticTD'
+  pod 'AnalyticUM'
+  pod 'AnalyticFL'
 
   # 广告
   # pod 'AdvertiseAdmob'
