--- a/Example/GamePluginIOS/GamePluginIOS-Info.plist
+++ b/Example/GamePluginIOS/GamePluginIOS-Info.plist
@@ -47,14 +47,6 @@
 	</dict>
 	<key>IETConfigs</key>
 	<dict>
-		<key>AWSCognitoIdentityPoolId</key>
-		<string>us-east-1:4f734aca-32b0-4788-a6ad-9b15df0716ed</string>
-		<key>AWSMobileAnalyticsAppId</key>
-		<string>9f4c9665f726472d8e400cf20c123c1b</string>
-		<key>AWSSNSPlatformApplicationArn</key>
-		<string>arn:aws:sns:us-east-1:091832752676:app/APNS/mayaslot</string>
-		<key>AWSSNSPlatformApplicationArnDev</key>
-		<string>arn:aws:sns:us-east-1:091832752676:app/APNS_SANDBOX/mayaslot</string>
 		<key>Adcolony_AppId</key>
 		<string>appf85fdb1609404f53a5</string>
 		<key>Adcolony_ZoneId</key>
@@ -73,12 +65,6 @@
 		<string>55560bf143150f4409a8c7eb</string>
 		<key>ChartBoost_AppSignature</key>
 		<string>5f6a4cc0976632f47842164c9b76c542e239bc4b</string>
-		<key>FileServer</key>
-		<string>https://ietstudio.github.io/assets</string>
-		<key>FileServerDev</key>
-		<string>https://ietstudio.github.io/assets</string>
-		<key>FlurryKey</key>
-		<string>R433V7Q4VNFVQH6VGKW5 </string>
 		<key>Inmobi_AccountId</key>
 		<string>9695dbf98c7d4531aa2346a73a2c1022</string>
 		<key>Inmobi_BannerId</key>
@@ -87,10 +73,12 @@
 		<string>1467526394503</string>
 		<key>Inmobi_SpotId</key>
 		<string>1465797760566</string>
+		<key>FlurryKey</key>
+		<string></string>
 		<key>TalkingDataChannal</key>
-		<string>AppStore</string>
+		<string>Test</string>
 		<key>TalkingDataKey</key>
-		<string>14B2C459391331DD7BB576BA45CF33BB</string>
+		<string></string>
 		<key>TencentGDT_AppKey</key>
 		<string>1104458775</string>
 		<key>TencentGDT_BannerId</key>
@@ -98,9 +86,9 @@
 		<key>TencentGDT_SpotId</key>
 		<string>8060605255860558</string>
 		<key>UmengChannal</key>
-		<string>AppStore</string>
+		<string>Test</string>
 		<key>UmengKey</key>
-		<string>55e0118a67e58ebdb40006d3</string>
+		<string></string>
 		<key>UnityAds_GameId</key>
 		<string>1076796</string>
 		<key>UnityAds_ZoneId</key>
