--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,6 +3,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 # use_frameworks!
 
 target 'GamePluginIOS_Example' do
+  platform :ios, '7.0'
   pod 'GamePluginIOS', :path => '../'
 
   # 统计
