--- a/Example/GamePluginIOS/GamePluginIOS-Info.plist
+++ b/Example/GamePluginIOS/GamePluginIOS-Info.plist
@@ -130,6 +130,7 @@
 		<string>fb-messenger-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
+        <string>cydia</string>
 	</array>
 </dict>
 </plist>
